@@ -1,3 +1,6 @@
+Fri Jan 14 19:19:45 CET 2011
+	Removing dead code, adding missing new symbols to export list. -CG
+
 Mon Jan 10 14:07:33 CET 2011
 	Releasing libmicrohttpd 0.9.5. -CG
 
